# wg-failover

./: .gitignore  Cargo.toml  README.md  USAGE_EXAMPLES.md  config.toml  install.py  install.sh  requirements.txt  wg-failover.service
src/: errors.rs  lib.rs  main.rs  network.rs
tests/: network_tests.rs
